# tsbm

./: .gitignore  README.md  benchmark.toml  plan.md  pyproject.toml
datasets/: dataset_manifest.toml  small_iot.csv
docker/: docker-compose.performance.yml  docker-compose.test.yml  docker-compose.yml
docs/: production-vm-specs.md
examples/: example_report.md
scripts/: quickstart.sh  setup-perf-vm.sh
src/tsbm/: __main__.py  exceptions.py
src/tsbm/adapters/: base.py  cratedb.py  questdb.py  registry.py  timescaledb.py  type_maps.py
src/tsbm/benchmarks/: __init__.py  base.py  ingestion.py  materialized_views.py  mixed.py  queries.py  registry.py
src/tsbm/cli/: __init__.py  compare.py  dashboard.py  main.py  report.py  run.py
src/tsbm/config/: settings.py
src/tsbm/dashboard/: __init__.py  app.py  charts.py
src/tsbm/datasets/: generator.py  loader.py  schema.py  timestamps.py
src/tsbm/environment/: __init__.py  capture.py
src/tsbm/metrics/: monitor.py  stats.py  timer.py
src/tsbm/results/: __init__.py  export.py  models.py  storage.py
tests/: conftest.py
tests/integration/: conftest.py  test_adapters.py
tests/unit/: test_generator.py  test_schema.py  test_stats.py  test_timestamps.py  test_type_maps.py
